examples/rejected/temporal_drift_wrong.urdr
# FALSE (drift): a step that COMMITS every proposed delta WITHOUT the contract check lets
# the conserved quantity DRIFT. Claiming the invariant survived an unlawful injection must
# DIE. This is why the commit-or-revert contract (temporal_invariant) has teeth: remove it
# and Q(final) != Q(initial). signum != res.
q := \fn s |-> nth(s, 0) + nth(s, 1) + nth(s, 2)
add3 := \fn s d |-> [nth(s,0)+nth(d,0), nth(s,1)+nth(d,1), nth(s,2)+nth(d,2)]
commit := \fn s d |-> add3(s, d)
s0 := [4, 1, 1]
deltas := [[-1, 1, 0], [1, 0, 0]]
sn := \fo(deltas, s0, commit)
=?(q(sn), q(s0))
